--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     your leadership skills, or explore emerging technologies, our LMS platform has something for
                     everyone.</p>
                 <p>Ready to embark on your learning journey? Click the button below to visit our new LMS platform.</p>
-                <a href="https://www.wiprofoundation.org/" class="btn">Explore LMS Platform</a>
+                <a href="https://moodle.com/solutions/lms/" class="btn">Explore LMS Platform</a>
             </div>
             <div class="lms-img">
                 <img src="https://images.vexels.com/media/users/3/199963/isolated/preview/08f03b340a63ff54d61cb709e4b57d07-guy-with-tablet-character-isometric-by-vexels.png"
